// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`track reducer should handle ADD_FAVORITE_TRACK 1`] = `
Object {
  "error": false,
  "href": "test",
  "items": Array [
    Object {
      "artists": Array [],
      "disc_number": 0,
      "duration_ms": 0,
      "explicit": true,
      "external_urls": Object {},
      "href": "test",
      "id": "test",
      "is_favorite": true,
      "is_local": true,
      "is_playable": true,
      "name": "test",
      "track_number": 0,
      "type": "test",
      "uri": "test",
    },
  ],
  "limit": 10,
  "next": "test",
  "offset": 10,
  "previous": "test",
  "total": 10,
}
`;

exports[`track reducer should handle ALBUM_NOT_FOUND 1`] = `
Object {
  "error": true,
  "href": "",
  "items": Array [],
  "limit": 0,
  "next": "",
  "offset": 0,
  "previous": "",
  "total": 0,
}
`;

exports[`track reducer should handle CHECK_FAVORITES 1`] = `
Object {
  "error": false,
  "href": "test",
  "items": Array [
    Object {
      "artists": Array [],
      "disc_number": 0,
      "duration_ms": 0,
      "explicit": true,
      "external_urls": Object {},
      "href": "test",
      "id": "test",
      "is_favorite": false,
      "is_local": true,
      "is_playable": true,
      "name": "test",
      "track_number": 0,
      "type": "test",
      "uri": "test",
    },
  ],
  "limit": 10,
  "next": "test",
  "offset": 10,
  "previous": "test",
  "total": 10,
}
`;

exports[`track reducer should handle REMOVE_FAVORITE_TRACK 1`] = `
Object {
  "error": false,
  "href": "test",
  "items": Array [
    Object {
      "artists": Array [],
      "disc_number": 0,
      "duration_ms": 0,
      "explicit": true,
      "external_urls": Object {},
      "href": "test",
      "id": "test",
      "is_favorite": false,
      "is_local": true,
      "is_playable": true,
      "name": "test",
      "track_number": 0,
      "type": "test",
      "uri": "test",
    },
  ],
  "limit": 10,
  "next": "test",
  "offset": 10,
  "previous": "test",
  "total": 10,
}
`;

exports[`track reducer should handle RESET_TRACKS 1`] = `
Object {
  "error": false,
  "href": "",
  "items": Array [],
  "limit": 0,
  "next": "",
  "offset": 0,
  "previous": "",
  "total": 0,
}
`;

exports[`track reducer should handle SET_TRACKS 1`] = `
Object {
  "error": false,
  "href": "test",
  "items": Array [],
  "limit": 10,
  "next": "test",
  "offset": 10,
  "previous": "test",
  "total": 10,
}
`;

exports[`track reducer should handle initial state 1`] = `
Object {
  "error": false,
  "href": "",
  "items": Array [],
  "limit": 0,
  "next": "",
  "offset": 0,
  "previous": "",
  "total": 0,
}
`;
